player spacing fix

--- a/main.css
+++ b/main.css
@@ -202,10 +202,11 @@ main {
 }
 
 #playerContainer {
-    max-height: 100%;
+    height: 100%;
     display: flex;
     flex-flow: column nowrap;
     align-items: center;
+    justify-content: center;
     overflow-y: auto;
 }
 #playerHero, #playerProficiency {
